--- a/app/app.css
+++ b/app/app.css
@@ -28,3 +28,17 @@
   content: "";
   padding: 0;
 }
+
+.templates {
+  text-align: center;
+}
+
+.templates img {
+  width: 70%;
+}
+
+.templates a {
+  width: 70%;
+  text-align: center;
+  margin: auto;
+}
